Updated references to some newly-added libraries and compinents.

--- a/clients/cronos/applications/online_review/branches/bugfix-6567/.settings/.component
+++ b/clients/cronos/applications/online_review/branches/bugfix-6567/.settings/.component
@@ -12,10 +12,10 @@
         <wb-resource deploy-path="/WEB-INF/classes/xml_phase_template.xsd" source-path="/conf/xml_phase_template.xsd"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/java/main"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/java/tests"/>
-        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/shared/shared.jar">
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/authentication_factory/2.0/authentication_factory.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/authentication_factory/2.0/authentication_factory.jar">
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/auto_pilot/1.0/auto_pilot.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/auto_screening_management/1.0/auto_screening_management.jar">
@@ -90,6 +90,9 @@
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/online_review_phases/1.0.2/online_review_phases.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/pacts_services/PactsServices.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/phase_management/1.0.3/phase_management.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -157,6 +160,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/workdays/1.0/workdays.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/shared.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/review/lib/tcs/tcsUtil.jar">
